--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
         "tailwindcss": "^2.0.2"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.0.19"
     }
 }
