--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/scripts.js": "/js/scripts.js",
     "/js/dashboard.js": "/js/dashboard.js",
+    "/js/app.js": "/js/app.js",
     "/css/style.css": "/css/style.css",
     "/css/dashboard.css": "/css/dashboard.css"
 }
