--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAGARME_API="https://api.pagar.me/core/v5"
+PAGARME_SK=
+PAGARME_PK=
+PAGARME_ID=
+PAGARME_RP=rp_Ve97PPQIA8So7PRZ
